--- a/SCSS/Insiders ITS Theme/_Text.scss
+++ b/SCSS/Insiders ITS Theme/_Text.scss
@@ -20,10 +20,10 @@
 .markdown-preview-section {
     text-rendering: optimizeLegibility;
     font-variant-ligatures: none;
-    // font-family: var(--default-font);
+    font-family: var(--default-font);
     line-height: var(--lh);
     color: var(--text-normal);
-    z-index: 0 !important;
+    // z-index: 0 !important;
 }
 /*Comments*/
 .cm-comment,
